...
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="default_leader">Default Leader</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="phone">Phone</string>
    <string name="verify_password">Verify Password</string>
...
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="my_events">My Events</string>
    <string name="completed">Completed</string>
    <string name="my_festivals">My Festivals</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
    <string name="organizer">Organizer</string>
    <string name="event_view">Event view</string>
    <string name="waiting_list">Waiting list</string>
    <string name="waiting_for_approval">Waiting for approval</string>
    <string name="bids">Bids</string>
    <string name="job_abc_until_ending_n_1_25_32">Job ABC, until ending:   1:25:32</string>
    <string name="apply">Apply</string>
    <string name="festivals_i_m_organizing">Festivals I\'m organizing</string>
    <string name="worker">Worker</string>
    <string name="price">Price</string>
    <string name="number_of_people">Number of people</string>
    <string name="time">Time</string>
    <string name="comment">Comment</string>
    <string name="application_profile">Application profile</string>
    <string name="apply_for_a_festival">Apply for a festival</string>
    <string name="festivalName">festival name</string>
    <string name="event">Event</string>
    <string name="decs">Decs</string>
    <string name="festival_name">Festival Name</string>
...
    <string name="create_job">Create Job</string>
    <string name="job_creation">Job Creation</string>
    <string name="started">Started</string>
    <string name="some_txt_change_from_java"><![CDATA[Some txt (change from Java) ->]]></string>
    <string name="my_jobs">My Jobs</string>
    <string name="generate_pass">Generate Pass</string>
    <string name="print_pass">Print Pass</string>
    <string name="name_abc_change_in_java">Name ABC (change in JAVA)</string>
    <string name="approve">Approve</string>
    <string name="specializations">Specializations</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="apply_for_a_job">Apply for a job</string>
    <string name="job_name">Job name</string>
    <string name="event_name">Event name</string>
    <string name="time_needed_to_complete">Time needed to complete</string>
    <string name="active_jobs">Active jobs</string>
    <string name="job_profile">Job profile</string>
    <string name="my_applications">My applications</string>
    <string name="create_new_festival">Create New Festival</string>
    <string name="add_specialization">Add Specialization</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="end_day">End Day</string>
    <string name="end_month">End Month</string>
    <string name="end_year">End Year</string>
    <string name="end_hour">End Hour</string>
...
    <string name="default_my_stuff">My stuffs list</string>
    <string name="default_list_atom">Something mine</string>
    <string name="default_role">My role</string>
    <string name="search_specializations">Search Specializations</string>
    <string name="extend">Extend</string>
    <string name="num_of_people">Num Of People</string>
    <string name="log_out">Log Out</string>
    <string name="description2">Description:</string>
    <string name="start_time2">Start time:</string>
    <string name="festival2">Festival:</string>
    <string name="event2">Event:</string>
    <string name="required_specializations2">Required specializations:</string>
    <string name="comment2">Comment:</string>
...
