...
            android:background="#ff9360"
            app:popupTheme="@style/AppTheme" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/worker_searchTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_weight="0.3"
        android:autofillHints=""
        android:hint="@string/search_specializations"
...
        android:layout_weight="0.3"
        android:onClick="searchSpecialization"
        android:text="@string/search" />


    <EditText
        android:id="@+id/tv_create_spec"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/add_specialization"
        android:inputType="text"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_create_spec"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:gravity="center"
        android:onClick="createSpecialization"
        android:text="@string/add_specialization" />

    <ListView
        android:id="@+id/worker_search_specialization"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="2.4"></ListView>


...
