...
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/job"
                android:textSize="21sp" />

...
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textSize="25sp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/numbOfPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:inputType="number"
                    android:hint="@string/number_of_people"
                    android:textSize="25sp"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/timeNeeded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:inputType="number"
                    android:hint="@string/time_needed_to_complete"
                    android:textSize="25sp"
...
                    android:hint="@string/comment"
                    android:textSize="25sp"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <Button
                android:id="@+id/workerApply"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="applyForJob"
                android:text="@string/apply" />
        </LinearLayout>
...
