...
        android:title="@string/my_profile" />
    <item
        android:id="@+id/addSpecialization"
        android:title="@string/add_specialization" />
    <item
        android:id="@+id/applyForJob"
        android:title="Apply for a Job" />
    <item
        android:id="@+id/activeJobs"
        android:title="Active Jobs" />
    <item
        android:id="@+id/myApplications"
        android:title="My Applications" />
    <item
        android:id="@+id/printPass"
        android:title="@string/print_pass" />
    <item
        android:id="@+id/search"
        android:title="@string/search" />
...
